Finishing the balance to date exercise (Post evaluation).
